; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_omf.c_load_buffer.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_omf.c_load_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8**, i32*, i32, i32*)* @load_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @load_buffer(i32* %0, i8** %1, i32* %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i8** %1, i8*** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = call i32* @r_buf_data(i32* %13, i32* %11)
  store i32* %14, i32** %12, align 8
  %15 = load i32*, i32** %12, align 8
  %16 = call i32 @r_return_val_if_fail(i32* %15, i32 0)
  %17 = load i32*, i32** %12, align 8
  %18 = load i32, i32* %11, align 4
  %19 = call i8* @r_bin_internal_omf_load(i32* %17, i32 %18)
  %20 = load i8**, i8*** %7, align 8
  store i8* %19, i8** %20, align 8
  %21 = load i8**, i8*** %7, align 8
  %22 = load i8*, i8** %21, align 8
  %23 = icmp ne i8* %22, null
  %24 = zext i1 %23 to i32
  ret i32 %24
}

declare dso_local i32* @r_buf_data(i32*, i32*) #1

declare dso_local i32 @r_return_val_if_fail(i32*, i32) #1

declare dso_local i8* @r_bin_internal_omf_load(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
